Fix scrollbar always showing up by default

--- a/packages/notebook-extension/style/base.css
+++ b/packages/notebook-extension/style/base.css
@@ -45,7 +45,9 @@ body[data-notebook='notebooks'] .jp-Notebook-cell {
 }
 
 /* Empty space at the bottom of the notebook (similar to classic) */
-body[data-notebook='notebooks'] .jp-Notebook.jp-mod-scrollPastEnd::after {
+body[data-notebook='notebooks']
+  .jp-Notebook.jp-mod-scrollPastEnd
+  .jp-WindowedPanel-outer::after {
   min-height: 100px;
 }
 
